# LLM-GUI

./: AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  REVIEW-NOTES.md  build.sh
docs/: ARCHITECTURE.md  BUILDING.md  PLUGIN_SYSTEM.md
packaging/debian/: build-package.sh  changelog  control  copyright  postinst  rules
packaging/linux/: build-debian.sh  build-release.sh  configure-debug.sh  llm-gui.desktop  run-from-build.sh
packaging/linux/container/: Containerfile  README.md  build-container.sh  run-llm-gui.sh
plugins/: README.txt  ask_user.json  ask_user_plugin.py  ask_user_source.py  call_claude_code.json  call_claude_code_plugin.py  call_claude_code_source.py  computer_use_tools.json  computer_use_tools_plugin.py  computer_use_tools_source.py  knowledge_memory_tool.json  knowledge_memory_tool_plugin.py  knowledge_memory_tool_source.py  llm_memory_tool.py  llm_plugin_manager_tool.py  memory_enhancement_tool_+.json  open_webui_code_execution_tool_v3.json  open_webui_code_execution_tool_v3_plugin.py  open_webui_code_execution_tool_v3_source.py  openwebui_skills_manager_tool.json  optimized_search.json  optimized_search_plugin.py  optimized_search_source.py  parallel_tools.json  parallel_web_search_tool.py  sample-echo.json  sample_echo_tool.py  superpowerswui.json  superpowerswui_plugin.py  visuals_toolkit.json  visuals_toolkit_plugin.py  visuals_toolkit_source.py  web_search_and_crawl.json  web_search_and_crawl_plugin.py  web_search_and_crawl_source.py  web_search_tool.py
resources/: app.qrc
scripts/: embed_llama_cpp.sh  install-debian-deps.sh
src/: main.cpp
src/app/: HuggingFaceDialog.cpp  HuggingFaceDialog.h  MainWindow.cpp  MainWindow.h  PluginManagerDialog.cpp  PluginManagerDialog.h  PtyTerminal.cpp  PtyTerminal.h  SettingsDialog.cpp  SettingsDialog.h
src/core/: AppSettings.cpp  AppSettings.h  ChatMessage.h  ChatSession.cpp  ChatSession.h  SessionStore.cpp  SessionStore.h
src/services/: ChatStreamParser.cpp  ChatStreamParser.h  DeepSeekClient.cpp  DeepSeekClient.h  HuggingFaceHubClient.cpp  HuggingFaceHubClient.h  LlamaCppClient.cpp  LlamaCppClient.h  LlamaCppServerManager.cpp  LlamaCppServerManager.h  ProviderClient.h  ProviderHealthProbe.cpp  ProviderHealthProbe.h
src/tools/: SandboxRunner.cpp  SandboxRunner.h  ToolRegistry.cpp  ToolRegistry.h
src/util/: AttachmentProcessor.cpp  AttachmentProcessor.h  TranscriptFormatter.cpp  TranscriptFormatter.h
